fix(blog-pagination): remove extra spacing

--- a/src/components/pages/blog/blog-pagination.module.scss
+++ b/src/components/pages/blog/blog-pagination.module.scss
@@ -20,6 +20,10 @@
 .navigation-item {
   text-decoration: none;
   margin: 0 1rem;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .inactive-link {
